--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-apps</artifactId>
         <version>2.5.10</version>
+        <!--<version>2.5.20</version>-->
+
     </parent>
 
     <artifactId>struts2-rest-showcase</artifactId>
